syntax = "proto3";

package rustperms;

import "google/protobuf/empty.proto";

service RustpermsMasterProto {
    rpc WriteChanges (WriteRequest) returns (google.protobuf.Empty);
    rpc GetSnapshot (google.protobuf.Empty) returns (SnapshotResponse);
}

message WriteRequest {
    string serialized_delta = 1;
}

service RustpermsReplicaProto {
    rpc CheckPerm(CheckPermRequest) returns (CheckPermReply);
    rpc GetSnapshot (google.protobuf.Empty) returns (SnapshotResponse);
}

message SnapshotResponse {
    string serialized_users = 1;
    string serialized_groups = 2;
}

message CheckPermRequest {
   string user_uid = 1;
   string permission = 2;
   bool unset_policy = 3;
}

message CheckPermReply {
    bool result = 1;
}